[workspace]
members = ["turntable", "path-url-rewrite"]

[workspace.package]
authors = ["Binbiubiubiu <2632003786.qq.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/turntable/"
homepage = "https://github.com/Binbiubiubiu/turntable"
repository = "https://github.com/Binbiubiubiu/turntable"
rust-version = "1.65"

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
# opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
opt-level = "z"

[workspace.dependencies]
swc = "0.261.15"
swc_core = "0.76.18"
swc_common = "0.31.10"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
