[package]
name = "path-url-rewrite"
version = "0.0.1"
edition = "2021"
description="A swc plugin for rewriting url in the path"
license.workspace = true

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
swc_core = { version = "0.76", features = ["ecma_plugin_transform"] }
once_cell.workspace = true
regex.workspace = true
url = "2.3"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
