[package]
name = "turntable"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Turntable is unpkg copy"
keywords = ["cdn", "npm", "unpkg", "web"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming",
  "web-programming::http-server",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-compression = { version = "0.4.0", features = ["tokio", "gzip"] }
base64 = "0.21"
bytes = "1"
cached = "0.43"
chrono = "0.4"
hashes = "0.1.9"
mime_guess = "2"
node-semver = "2.1.0"
once_cell.workspace = true
poem = { version = "1", features = ["static-files", "compression", "anyhow"] }
regex.workspace = true
reqwest = { version = "0.11", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
swc.workspace = true
swc_core.workspace = true
swc_common.workspace = true
thiserror = "1"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "net",
] }
tokio-stream = "0.1.14"
tokio-tar = "0.3"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
validate_npm_package_name = { version = "0.1", package = "validate_package_name" }
path-url-rewrite = { path = "../path-url-rewrite" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
